trying to fix empty space at bottom on mobile

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -332,16 +332,15 @@ header {
 }
 
 footer {
-    display: flex;
-    align-items: center;
+    /* display: flex;
+    align-items: center; */
     height: 75px;
     padding: 0px 5%;
-    margin-bottom: -50px;
 }
 
 footer p {
     margin: 0;
-    padding: 0;
+    padding-top: 30px;
     font-weight: 600;
 }
 
